[fix] card overflow hidden

--- a/Milestone 3/assets/css/style.css
+++ b/Milestone 3/assets/css/style.css
@@ -23,23 +23,29 @@ html{
     align-items: center;
 }
 
-/* -----------------HEADER----------------- */
-
-/* ------------------MAIN------------------ */
-
-/* ------------------CARD------------------ */
 .ms-card {
     width: 250px;
     position: relative;
     transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
-    border-radius: 1em;
+    border-radius: 10px;
+    -webkit-box-shadow: 0px 0px 50px -23px #0d6efd;
+    box-shadow: 0px 0px 50px -23px #0d6efd;
+    overflow: hidden;
 }
 
+.fa-building{
+    color: #0d6efd;
+}
+
+/* -----------------HEADER----------------- */
+
+/* ------------------MAIN------------------ */
 .card-image {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 1em;
+    border-radius: 10px;
+    
 }
 
 .card-description {
@@ -47,12 +53,11 @@ html{
     width: 100%;
     position: absolute;
     flex-direction: column;
-    height: 55%;
+    height: 50%;
     bottom: 0;
-    border-radius: 1em;
     padding: 1rem;
     background-color: #f5f5f5;
-    border-radius: 15px;
+    border-radius: 10px;
 
 }
 
@@ -67,6 +72,7 @@ html{
 }
 
 .ms-card:hover .card-description {
-    transition: all 1s cubic-bezier(0.645, 0.045, 0.355, 1);
+    transition: all .5s cubic-bezier(0.645, 0.045, 0.355, .5);
     transform: translateY(100%);
+    bottom: 25%;
 }
